--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ kiwisolver==1.1.0
 matplotlib==3.1.1
 networkx==2.3
 numpy==1.17.2
+objectpath==0.6.1
 Pillow==6.1.0
 pyasn1==0.4.6
 pycodestyle==2.5.0
