--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ cycler==0.10.0
 decorator==4.4.0
 Deprecated==1.2.6
 dj-database-url==0.5.0
-Django==2.1.7
+django==2.2.24
 django-rest-auth==0.9.5
 djangorestframework==3.9.1
 djangorestframework-jwt==1.11.0
-ecdsa==0.13.2
+ecdsa==0.13.3
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
@@ -18,7 +18,7 @@ matplotlib==3.1.1
 networkx==2.3
 numpy==1.17.2
 objectpath==0.6.1
-Pillow==6.1.0
+pillow==8.2.0
 pyasn1==0.4.6
 pycodestyle==2.5.0
 PyGithub==1.43.8
@@ -30,10 +30,10 @@ python-jose==3.0.1
 pytz==2018.9
 PyWavelets==1.0.3
 requests==2.21.0
-rsa==4.0
+rsa==4.7
 scikit-image==0.15.0
 scipy==1.3.1
 six==1.12.0
 sqlparse==0.3.0
-urllib3==1.24.1
+urllib3==1.26.5
 wrapt==1.11.2
